fix(taskqueue): migrate to REST dispatch for transactional tasks and fix shading
- Implement pure HTTP REST client in CloudTasksClientWrapper (makeRestPost, makeRestGet, makeRestDelete) to avoid shaded Protobuf NoSuchMethodError.
- Implement dispatchPendingTask using JSON payloads for seamless Cloud Tasks delivery.
- Propagate ApiProxy.Environment to asynchronous background threads in TaskProcessor.
- Add null-safe fallback for GCP project ID and region discovery.
- Add X-AppEngine-Cron header validation in SweeperServlet for /_ah/cloudtask/sweep.
- Exclude Cloud Tasks and GAX libraries from shaded uber-jar artifact in pom.xml.